Refactor styling of header, under bar and top menu

--- a/landing-page/src/components/header/signUp/_signUp.sass
+++ b/landing-page/src/components/header/signUp/_signUp.sass
@@ -8,6 +8,7 @@ div.signUp
         font-size: 36px
         line-height: 49px
         padding-bottom: 30px
+        font-weight: 900
     p
         margin: 0
         text-align: left
@@ -33,5 +34,7 @@ div.signUp
         line-height: 19.12px
         color: $dark-grey
         padding: 0
+        letter-spacing: -0.022em
+        font-weight: 100
         &span
             text-decoration: underline
