--- a/landing-page/src/components/topMenu/_topMenu.sass
+++ b/landing-page/src/components/topMenu/_topMenu.sass
@@ -4,16 +4,13 @@ div.topMenu
     +flex
     height: 60px
     border-bottom: 1px solid $light-grey
-    div.logo-bg
-        position: relative
+    div.logo
         margin: 0 14px
         width: 34px
         height: 34px
-        background-color: $black
-        border-radius: 50%
-        div.logo
-            +bg-image(10.2px, 23.17px, './../assets/fewLogo.png')
-            +center
+        background-image: url('./../assets/logo.svg')
+        background-repeat: no-repeat
+        background-size: contain
     p.spaceSystem
         margin: 0
         font-size: 24px
