--- a/landing-page/src/components/header/_header.sass
+++ b/landing-page/src/components/header/_header.sass
@@ -3,6 +3,13 @@
 div.header
     position: relative
     +bg-image(calc(98vh - 60px), 100%, './../assets/Beauty-Sideboard-1.png')
+    div.shadow
+        position: absolute
+        width: 100%
+        height: 100%
+        top: 0
+        left: 0
+        background: linear-gradient(to bottom left,rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.7) 100%)
     div.title
         position: absolute
         left: 100px
@@ -11,6 +18,7 @@ div.header
         font-size: 64px
         text-align: left
         color: $light-white
+        font-weight: 900
     button.seeMore
         position: absolute
         left: 50%
