--- a/landing-page/src/components/underBar/_underBar.sass
+++ b/landing-page/src/components/underBar/_underBar.sass
@@ -9,15 +9,12 @@ div.underBar
     color: $green
     z-index: 1
     // display: hidden
-    div.circle
-        position: relative
+    div.status
         margin: 10px
-        height: 16px
-        width: 16px
-        background-color: $green
-        border-radius: 50%
-        div.checked
-            +bg-image(5px, 7.5px, './../assets/checked.png')
-            +center
+        height: 19px
+        width: 19px
+        background-image: url('./../assets/status_icon.svg')
+        background-repeat: no-repeat
+        background-size: contain
     p
         font-size: 14px
