--- a/landing-page/src/styles/index.sass
+++ b/landing-page/src/styles/index.sass
@@ -1,3 +1,4 @@
+@import url('https://fonts.cdnfonts.com/css/avenir')
 @import 'mixins'
 @import 'variables'
 @import 'functions'
@@ -8,4 +9,6 @@ body
     padding: 0
     box-sizing: border-box
     text-align: center
-    font-family: Arial, Helvetica, sans-serif
+    font-family: 'Avenir', sans-serif
+    button
+        font-family: 'Avenir', sans-serif
