--- a/landing-page/src/styles/_mixins.sass
+++ b/landing-page/src/styles/_mixins.sass
@@ -5,14 +5,13 @@
     justify-content: $justify-content
     align-items: $align-items
 
-=container($width)
-    position: absolute
-    width: $width
+=container($width, $padding: 45px 50px, $background-color: $white, $border-radius: 10px)
     +flex(column, space-between, stretch)
-    padding: 45px 50px
-    background-color: $white
+    width: $width
+    padding: $padding
+    background-color: $background-color
     border: 1px solid $grey
-    border-radius: 10px
+    border-radius: $border-radius
     backdrop-filter: blur(2px)
 
 =bg-image($height, $width, $url, $size: cover)
