Add products control panel content and styling.

--- a/landing-page/src/components/header/_header.sass
+++ b/landing-page/src/components/header/_header.sass
@@ -2,7 +2,7 @@
 
 div.header
     position: relative
-    +bg-image(calc(98vh - 60px), 100%, './../assets/Beauty-Sideboard-1.png')
+    +bg-image(calc(98vh - 60px), 100%, './../assets/Beauty-Sideboard-1.png', cover)
     div.shadow
         position: absolute
         width: 100%
