--- a/landing-page/src/components/serviceBar/_serviceBar.sass
+++ b/landing-page/src/components/serviceBar/_serviceBar.sass
@@ -12,6 +12,8 @@ div.serviceBar
             &.return
                 +bg-image(16px, 19px, './../assets/return_icon.svg')
             &.info
-                +bg-image(18px, 19px, './../assets/info_icon.svg')
+                +bg-image(18px, 18px, './../assets/info_icon.svg')
+                &:hover
+                    +bg-image(18px, 18px, './../assets/info_icon-Type=Hoover.svg')
         p
             margin: 0 12px
