--- a/landing-page/src/styles/index.sass
+++ b/landing-page/src/styles/index.sass
@@ -10,5 +10,7 @@ body
     box-sizing: border-box
     text-align: center
     font-family: 'Avenir', sans-serif
+    p
+        margin: 0
     button
         font-family: 'Avenir', sans-serif
