--- a/landing-page/src/components/serviceBar/_serviceBar.sass
+++ b/landing-page/src/components/serviceBar/_serviceBar.sass
@@ -1,6 +1,9 @@
 div.serviceBar
     +flex
     height: 70px
+    border-width: 1px 0px
+    border-style: solid
+    border-color: $grey
     div.serviceBarItem
         margin: 0 90px
         +flex
@@ -15,5 +18,6 @@ div.serviceBar
                 +bg-image(18px, 18px, './../assets/info_icon.svg')
                 &:hover
                     +bg-image(18px, 18px, './../assets/info_icon-Type=Hoover.svg')
+                    cursor: pointer
         p
             margin: 0 12px
