--- a/landing-page/src/styles/index.sass
+++ b/landing-page/src/styles/index.sass
@@ -10,7 +10,7 @@ body
     box-sizing: border-box
     text-align: center
     font-family: 'Avenir', sans-serif
-    p
+    p, h1
         margin: 0
     button
         font-family: 'Avenir', sans-serif
