Add popUp styling,show up and close functionality.

--- a/landing-page/src/components/App/_app.sass
+++ b/landing-page/src/components/App/_app.sass
@@ -1,3 +1,4 @@
+@import "../signUp/_signUp"
 @import '../topMenu/_topMenu'
 @import '../header/_header'
 @import '../productSection/_productSection'
