--- a/landing-page/src/styles/_variables.sass
+++ b/landing-page/src/styles/_variables.sass
@@ -6,6 +6,7 @@ $light-grey: #EBEBEB
 $dark-white: #F5F5F5
 $white: #FBFBFB
 $light-white: #FEFEFE
+$red: #F26313
 $brown: #883900
 $yellow: #FFD232
 $green: #06C28F
