--- a/landing-page/src/components/topMenu/_topMenu.sass
+++ b/landing-page/src/components/topMenu/_topMenu.sass
@@ -1,9 +1,15 @@
 @import '../underBar/_underBar'
 
 div.topMenu
-    +flex
+    position: fixed
+    top: 0
+    left: 0
+    width: 100%
     height: 60px
+    z-index: 1
+    +flex
     border-bottom: 1px solid $light-grey
+    background-color: $white
     div.logo
         margin: 0 14px
         width: 34px
