Add toggle Top Menu visibility on scroll.

--- a/landing-page/src/components/header/_header.sass
+++ b/landing-page/src/components/header/_header.sass
@@ -1,7 +1,7 @@
 div.header
     position: relative
-    top: 60px
-    +bg-image(calc(98vh - 60px), 100%, './../assets/Beauty-Sideboard-1.png', cover)
+    top: 0
+    +bg-image(calc(98vh), 100%, './../assets/Beauty-Sideboard-1.png', cover)
     div.shadow
         position: absolute
         width: 100%
