--- a/landing-page/src/components/productSection/_productSection.sass
+++ b/landing-page/src/components/productSection/_productSection.sass
@@ -47,6 +47,7 @@ div.productSection
                         border: 1px solid $grey
                         border-radius: 2px
                         opacity: 0.5
+                        cursor: pointer
                         &.active
                             border-color: $black
                             opacity: 1
