--- a/landing-page/src/components/signUp/_signUp.sass
+++ b/landing-page/src/components/signUp/_signUp.sass
@@ -37,8 +37,9 @@ div.signUp
         padding: 0
         letter-spacing: -0.022em
         font-weight: 100
-        &span
+        span
             text-decoration: underline
+            cursor: pointer
     div.close
         +bg-image(32px, 32px, './../assets/close.svg')
         position: absolute
