Add scroll to product funct. to see more button.

--- a/landing-page/src/components/productCategories/_productCategories.sass
+++ b/landing-page/src/components/productCategories/_productCategories.sass
@@ -19,6 +19,7 @@ div.productCategories
             gap: 20px
             div.category
                 +container(295px, 0, $blue, 5px)
+                cursor: pointer
                 div.pictureContainer
                     height: 280px
                     overflow: hidden
