--- a/landing-page/src/components/signUp/_signUp.sass
+++ b/landing-page/src/components/signUp/_signUp.sass
@@ -30,7 +30,7 @@ div.signUp
     button.joinBtn
         margin: 15px 0
         width: auto
-    p.postscript
+    p.note
         font-size: 14px
         line-height: 19.12px
         color: $dark-grey
