Add arrows in thumbs slider in product gallery.

--- a/landing-page/src/components/productSection/gallery/_gallery.sass
+++ b/landing-page/src/components/productSection/gallery/_gallery.sass
@@ -26,7 +26,12 @@ div.picture
             background-color: $black
             width: 10px
             height: 10px
+    .control-next.control-arrow:before
+        border-left: 8px solid $black
+    .control-prev.control-arrow:before
+        border-right: 8px solid $black
     .thumbs-wrapper
+        margin: auto
         .thumbs
             margin: 0
             padding-inline-start: 0
