Refactor and add accordion basic structure.

--- a/landing-page/src/components/productSection/gallery/_gallery.sass
+++ b/landing-page/src/components/productSection/gallery/_gallery.sass
@@ -4,6 +4,7 @@ div.picture
     +bg-image(473px, 100%, './../assets/Sideboard_picture.svg', cover)
     &.thumbPicture
         height: 85px
+        cursor: pointer
 .carousel
     width: 820px
     div.arrow
