--- a/landing-page/src/components/productSection/controlPanel/_controlPanel.sass
+++ b/landing-page/src/components/productSection/controlPanel/_controlPanel.sass
@@ -1,15 +1,16 @@
+@import 'accordion/_accordion'
+
 div.controlPanel
     +container(399px, 0, $light-white, 5px)
     border-color: $light-grey
     text-align: left
-    div.title
+    div.productTitle
         padding: 15px 0 15px 20px
         font-size: 30px
         font-weight: 500
         line-height: 41px
     div.productInfo
         +flex(column, space-between, stretch)
-        height: 322px
         background-color: $white
         border-width: 1px 0px
         border-style: solid
@@ -17,23 +18,6 @@ div.controlPanel
         p.title
             margin-left: 25px
             line-height: 54px
-
-        div.label
-            +flex(row, flex-start)
-            margin-left: 28px
-            height: 53px
-            border-top: 1px solid $dark-white
-            cursor: pointer
-            div.plus
-                +bg-image(10px,10px, './../assets/plus-light.svg')
-                margin-right: 9px
-            p
-                font-weight: 300
-            &:hover
-                div.plus
-                    background-image: url('./../assets/plus-dark.svg')
-                p
-                    font-weight: 900
     div.bottomSection
         +flex(row, flex-start)
         div.priceContainer
