--- a/landing-page/src/components/topMenu/_topMenu.sass
+++ b/landing-page/src/components/topMenu/_topMenu.sass
@@ -1,34 +1,41 @@
-@import '../underBar/_underBar'
+@import './underBar/_underBar'
 
 div.topMenu
     position: fixed
     top: 0
     left: 0
+    z-index: 1
+    transition: .3s
     width: 100%
     height: 60px
-    z-index: 1
-    +flex
-    border-bottom: 1px solid $light-grey
-    background-color: $white
-    transition: .3s
-    div.home
+    div.topMenuContainer
         +flex
-        cursor: pointer
-        div.logo
-            margin: 0 14px
-            width: 34px
-            height: 34px
-            background-image: url('./../assets/logo.svg')
-            background-repeat: no-repeat
-            background-size: contain
-        p.spaceSystem
-            margin: 0
-            font-size: 24px
-            font-weight: 900
-            line-height: 60px
-    button.joinBtn
+        border-bottom: 1px solid $light-grey
+        background-color: $white
+        z-index: 1
         position: absolute
         top: 0
-        right: 0
+        left: 0
+        width: 100%
+        height: 60px
+        div.home
+            +flex
+            cursor: pointer
+            div.logo
+                margin: 0 14px
+                width: 34px
+                height: 34px
+                background-image: url('./../assets/logo.svg')
+                background-repeat: no-repeat
+                background-size: contain
+            p.spaceSystem
+                margin: 0
+                font-size: 24px
+                font-weight: 900
+                line-height: 60px
+        button.joinBtn
+            position: absolute
+            top: 0
+            right: 0
     &.disabled
         top: -60px
