Add accordion animation functionality.

--- a/landing-page/src/components/productSection/_productSection.sass
+++ b/landing-page/src/components/productSection/_productSection.sass
@@ -2,11 +2,9 @@
 @import 'gallery/_gallery'
 
 div.productSection
-    position: relative
-    min-height: 698px
+    min-height: 578px
     background-color: $dark-white
+    padding: 60px 10px
     div.content
-        +center
-        +flex(row, space-between, stretch)
-        height: 578px
-        width: 1240px
+        +flex(row, center, stretch)
+        gap: 20px
