--- a/landing-page/src/components/productSection/gallery/_gallery.sass
+++ b/landing-page/src/components/productSection/gallery/_gallery.sass
@@ -5,43 +5,47 @@ div.picture
     &.thumbPicture
         height: 85px
         cursor: pointer
-.carousel
-    width: 820px
-    div.arrow
-        +center
-        +bg-image(32px, 32px, './../assets/Arrows-light.svg')
-        transform: translateX(0)
-        z-index: 1
-        &:hover
-            background-image: url('./../assets/Arrows-dark.svg')
-            cursor: pointer
-        &.left
-            left: 20px
-        &.right
-            left: auto
-            right: 20px
-            transform: rotate(180deg)
-    .control-dots
-        .dot
-            box-shadow: none
-            background-color: $black
-            width: 10px
-            height: 10px
-    .control-next.control-arrow:before
-        border-left: 8px solid $black
-    .control-prev.control-arrow:before
-        border-right: 8px solid $black
-    .thumbs-wrapper
-        margin: auto
-        .thumbs
+.carousel-root
+    +flex(column, space-around)
+    .carousel
+        width: 820px
+        .slider-wrapper
+
+        div.arrow
+            +center
+            +bg-image(32px, 32px, './../assets/Arrows-light.svg')
+            transform: translateX(0)
+            z-index: 1
+            &:hover
+                background-image: url('./../assets/Arrows-dark.svg')
+                cursor: pointer
+            &.left
+                left: 20px
+            &.right
+                left: auto
+                right: 20px
+                transform: rotate(180deg)
+        .control-dots
+            .dot
+                box-shadow: none
+                background-color: $black
+                width: 10px
+                height: 10px
+        .control-next.control-arrow:before
+            border-left: 8px solid $black
+        .control-prev.control-arrow:before
+            border-right: 8px solid $black
+        .thumbs-wrapper
             margin: 0
-            padding-inline-start: 0
-            .thumb
-                border: 1px solid $grey
-                border-radius: 2px
-                opacity: 0.5
+            .thumbs
+                margin: 0
                 padding: 0
-                margin-right: 10px
-                &.selected, &:hover, &:focus
-                    border: 1px solid $black
-                    opacity: 1
+                .thumb
+                    border: 1px solid $grey
+                    border-radius: 2px
+                    opacity: 0.5
+                    padding: 0
+                    margin-right: 10px
+                    &.selected, &:hover, &:focus
+                        border: 1px solid $black
+                        opacity: 1
