Add carousel animation to product categories section.

--- a/landing-page/src/components/App/_app.sass
+++ b/landing-page/src/components/App/_app.sass
@@ -1,3 +1,4 @@
+@import "../infiniteCarousel/_infiniteCarousel"
 @import "../signUp/_signUp"
 @import '../topMenu/_topMenu'
 @import '../header/_header'
