--- a/landing-page/src/components/productCategories/categoriesCarousel/_categoriesCarousel.sass
+++ b/landing-page/src/components/productCategories/categoriesCarousel/_categoriesCarousel.sass
@@ -1,12 +1,19 @@
-.carousel-container
+.categories-carousel-container
     +flex(column)
     gap: 30px
     width: 100%
-    .carousel
+    .categories-carousel
         position: relative
-        height: 400px
         width: 100%
         overflow: hidden
+        .slides-list
+            position: absolute
+            top: 0
+            left: 0
+            +flex
+            gap: 20px
+            padding: 0 100px
+            transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms
         .arrow
             +center
             +bg-image(35px, 35px, './../assets/Arrows-black.svg')
