--- a/landing-page/src/components/topMenu/_topMenu.sass
+++ b/landing-page/src/components/topMenu/_topMenu.sass
@@ -8,6 +8,8 @@ div.topMenu
     transition: .3s
     width: 100%
     height: 60px
+    +smMaxBreakPoint
+        z-index: 11
     div.topMenuContainer
         +flex
         border-bottom: 1px solid $light-grey
@@ -18,6 +20,8 @@ div.topMenu
         left: 0
         width: 100%
         height: 60px
+        +xlMaxBreakPoint
+            justify-content: left
         div.home
             +flex
             cursor: pointer
@@ -33,9 +37,14 @@ div.topMenu
                 font-size: 24px
                 font-weight: 900
                 line-height: 60px
+                +lgMaxBreakPoint
+                    font-size: 20px
         button.joinBtn
             position: absolute
             top: 0
             right: 0
+            +lgMaxBreakPoint
+                width: 135px
+                margin-right: 10px
     &.disabled
         top: -60px
