--- a/landing-page/src/styles/_variables.sass
+++ b/landing-page/src/styles/_variables.sass
@@ -13,3 +13,9 @@ $green: #06C28F
 $light-green: #E7F9F4
 $blue: #847FFB
 $light-blue: #ECEDFC
+// breakpoints
+$screen-sm: 400px
+$screen-md: 600px
+$screen-lg: 1024px
+$screen-xl: 1240px
+$wrapper: 1440px
